# amomomotus

./: README.md  main.py  pyproject.toml
games/: bingo.py  engine.py  motus.py  teams.py
glcore/: application.py  constants.py  widget.py  window.py
